--- a/src/sass/general.scss
+++ b/src/sass/general.scss
@@ -11,3 +11,11 @@
 .hide{
     display:none;
 }
+
+.cutText {
+    display: block;
+    width: 95%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
