--- a/src/sass/general.scss
+++ b/src/sass/general.scss
@@ -1,13 +1,10 @@
 @import 'bootstrap/scss/bootstrap';
 @import '@fortawesome/fontawesome-free';
 
-// ul {
-//     list-style-type: none;
-//     a {
-//         text-decoration: none;
-//         color: white;
-//     }
-// }
+img{
+    max-width: 100%;
+}
+
 
 .hide{
     display:none;
