Feat: Created NotFoundPage component and added overflow-x hidden in body

--- a/src/sass/general.scss
+++ b/src/sass/general.scss
@@ -1,6 +1,9 @@
 @import 'bootstrap/scss/bootstrap';
 @import '@fortawesome/fontawesome-free';
 
+body {
+    overflow-x: hidden;
+}
 
 img{
     max-width: 100%;
